--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,29 +1,122 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <com.github.florent37.materialviewpager.MaterialViewPager
-        android:id="@+id/materialViewPager"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:viewpager_color="@color/colorPrimary"
-        app:viewpager_enableToolbarElevation="true"
-        app:viewpager_headerAdditionalHeight="20dp"
-        app:viewpager_headerAlpha="0.6"
-        app:viewpager_headerHeight="200dp"
-        app:viewpager_hideLogoWithFade="false"
-        app:viewpager_hideToolbarAndTitle="true"
-        app:viewpager_logo="@layout/header_logo_text"
-        app:viewpager_logoMarginTop="100dp"
-        app:viewpager_pagerTitleStrip="@layout/material_view_pager_pagertitlestrip_newstand"
-        app:viewpager_parallaxHeaderFactor="1.5">
-        <com.github.clans.fab.FloatingActionButton>
-    </com.github.florent37.materialviewpager.MaterialViewPager>
+        android:layout_height="match_parent">
 
+        <com.github.florent37.materialviewpager.MaterialViewPager
+            android:id="@+id/materialViewPager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:viewpager_color="@color/colorPrimary"
+            app:viewpager_enableToolbarElevation="true"
+            app:viewpager_headerAdditionalHeight="20dp"
+            app:viewpager_headerAlpha="0.6"
+            app:viewpager_headerHeight="200dp"
+            app:viewpager_hideLogoWithFade="false"
+            app:viewpager_hideToolbarAndTitle="true"
+            app:viewpager_logo="@layout/header_logo_text"
+            app:viewpager_logoMarginTop="100dp"
+            app:viewpager_pagerTitleStrip="@layout/material_view_pager_pagertitlestrip_newstand"
+            app:viewpager_parallaxHeaderFactor="1.5">
+
+
+        </com.github.florent37.materialviewpager.MaterialViewPager>
+
+        <com.github.clans.fab.FloatingActionMenu
+            android:id="@+id/MainMenu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            app:menu_icon="@mipmap/ic_widgets"
+            app:menu_animationDelayPerItem="100"
+            app:menu_colorNormal="#4169e1"
+            app:menu_colorPressed="#000099"
+            app:menu_labels_hideAnimation="@anim/hide_to_bottom"
+            app:menu_labels_showAnimation="@anim/show_from_bottom"
+            app:menu_labels_style="@style/FloatMenuStyle"
+            app:menu_shadowColor="#444">
+
+            <com.github.clans.fab.FloatingActionButton
+                android:id="@+id/Main_facebook"
+                style="@style/FloatButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:src="@mipmap/ic_thumb_up"
+                app:fab_colorNormal="#000099"
+                app:fab_colorPressed="#4169e1"
+                app:fab_label="페이스북" />
+
+            <com.github.clans.fab.FloatingActionButton
+                android:id="@+id/Main_refresh"
+                style="@style/FloatButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:src="@mipmap/ic_refresh"
+                app:fab_colorNormal="#00ff00"
+                app:fab_colorPressed="#32cd32"
+                app:fab_label="급식 데이터 새로받기 (저장 필수)" />
+
+            <com.github.clans.fab.FloatingActionButton
+                android:id="@+id/Main_rate"
+                style="@style/FloatButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:src="@mipmap/ic_grade"
+                app:fab_colorNormal="#ffd700"
+                app:fab_colorPressed="#ffff00"
+                app:fab_label="오늘의 평가" />
+
+            <com.github.clans.fab.FloatingActionButton
+                android:id="@+id/Main_save"
+                style="@style/FloatButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:src="@mipmap/ic_file_download"
+                app:fab_colorNormal="#ff8c00"
+                app:fab_colorPressed="#ffa500"
+                app:fab_label="급식 데이터 저장" />
+
+            <com.github.clans.fab.FloatingActionButton
+                android:id="@+id/Main_Dinner"
+                style="@style/FloatButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:src="@mipmap/ic_alarm"
+                app:fab_colorNormal="#7b68ee"
+                app:fab_colorPressed="#8a2be2"
+                app:fab_label="석식알림(OFF)" />
+
+            <com.github.clans.fab.FloatingActionButton
+                android:id="@+id/Main_Lunch"
+                style="@style/FloatButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:src="@mipmap/ic_alarm"
+                app:fab_colorNormal="#dc143c"
+                app:fab_colorPressed="#ff0000"
+                app:fab_label="중식알림(OFF)" />
+
+        </com.github.clans.fab.FloatingActionMenu>
+
+
+    </RelativeLayout>
 
     <include layout="@layout/drawer"></include>
 </android.support.v4.widget.DrawerLayout>
