--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
 
-    <style name="AppBaseTheme" parent="@style/Theme.AppCompat.Light">
-    </style>
+    <style name="AppBaseTheme" parent="@style/Theme.AppCompat.Light"></style>
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
@@ -25,7 +24,8 @@
         <item name="colorAccent">@color/accent_color</item>
 
         <item name="android:statusBarColor" tools:targetApi="21">@color/statusBarColor</item>
-        <item name="android:navigationBarColor" tools:targetApi="21">@color/navigationBarColor</item>
+        <item name="android:navigationBarColor" tools:targetApi="21">@color/navigationBarColor
+        </item>
         <item name="android:windowDrawsSystemBarBackgrounds" tools:targetApi="21">true</item>
 
     </style>
@@ -40,4 +40,23 @@
         <item name="color">@color/drawerArrowColor</item>
     </style>
 
+    <style name="FloatMenuStyle">
+        <item name="android:background">
+            @drawable/xml
+        </item>
+        <item name="android:textColor">#FFF</item>
+        <item name = "android:textSize">15sp</item>
+        <item name="android:maxLines">2</item>
+        <item name="android:ellipsize">marquee</item>
+        <!--<item name="android:ellipsize">end</item>-->
+    </style>
+    
+    <style name="FloatButtonStyle">
+        <item name = "android:textSize">8sp</item>
+        <item name="fab_size">mini</item>
+        <item name="fab_showAnimation">@anim/fab_scale_up</item>
+        <item name="fab_hideAnimation">@anim/fab_scale_down</item>
+        <item name="fab_shadowColor">#444</item>
+
+    </style>
 </resources>
