--- a/app/src/main/res/layout/header_logo_text.xml
+++ b/app/src/main/res/layout/header_logo_text.xml
@@ -7,7 +7,7 @@
     android:fitsSystemWindows="true"
     android:adjustViewBounds="true"
     android:layout_centerHorizontal="true"
-    android:text="@string/app_name"
+    android:text=""
     android:textColor="#444"
     android:textSize="45sp"
     app:reflectionColor="#f00">
