--- a/app/src/main/res/layout/header_logo_2.xml
+++ b/app/src/main/res/layout/header_logo_2.xml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="80dp"
-    android:layout_height="80dp"
-    android:background="@drawable/circle">
-    <ImageView
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:fitsSystemWindows="true"
-        android:adjustViewBounds="true"
-        android:layout_gravity="center"
-        android:src="@drawable/flying"/>
+<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="65dp"
+    android:layout_height="65dp"
 
-</FrameLayout>
+    android:adjustViewBounds="true"
+    android:fitsSystemWindows="true"
+    android:layout_centerHorizontal="true"
+    android:src="@mipmap/launcher_shadow" />
+
