--- a/app/src/main/res/layout/rate_item_card_big.xml
+++ b/app/src/main/res/layout/rate_item_card_big.xml
@@ -11,7 +11,7 @@
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginBottom="@dimen/cardMarginVertical"
         android:layout_marginLeft="@dimen/cardMarginHorizontal"
@@ -29,16 +29,16 @@
             android:background="@null"
             android:orientation="vertical">
 
-            <RatingBar
+            <com.gms.gms_meal.lib.ColoredRatingBar
                 android:id="@+id/bigRatingBar"
+                style="@style/coloredRatingBarStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
-                android:layout_gravity="center_horizontal"
                 android:layout_marginTop="20dp"
-                android:background="@null"
-                android:rating="2.4" />
+                app:rating="5.0"
+                android:layout_gravity="center_horizontal" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -60,7 +60,9 @@
                         android:layout_centerVertical="true"
                         android:layout_gravity="center_horizontal|center_vertical"
                         android:text="5.0"
-                        android:textSize="80sp" />
+                        android:textSize="80sp"
+                        android:textColor="#000000"
+                        android:layout_margin="10dp" />
 
                 </RelativeLayout>
 
@@ -83,16 +85,20 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical|center_horizontal"
                             app:fa_icon="fa-user"
-                            android:layout_weight="1"></com.gms.gms_meal.lib.FontAwesomeText>
+                            android:layout_weight="1"
+                            android:gravity="right"
+                            android:paddingRight="5dp"></com.gms.gms_meal.lib.FontAwesomeText>
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="num"
                             android:id="@+id/bigNum"
-                            android:layout_gravity="center_vertical|center_horizontal"
                             android:layout_weight="1"
-                            android:gravity="center" />
+                            android:textColor="#000000"
+                            android:gravity="left"
+                            android:layout_gravity="center"
+                            android:paddingLeft="3dp" />
 
                     </LinearLayout>
 
@@ -103,7 +109,8 @@
                         android:layout_weight="1"
                         android:text="bigDate"
                         android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:gravity="center" />
+                        android:gravity="center"
+                        android:textColor="#000000" />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
