--- a/app/src/main/res/layout/rate_item_card_big.xml
+++ b/app/src/main/res/layout/rate_item_card_big.xml
@@ -60,9 +60,10 @@
                         android:layout_centerVertical="true"
                         android:layout_gravity="center_horizontal|center_vertical"
                         android:text="5.0"
-                        android:textSize="80sp"
+                        android:textSize="70dp"
                         android:textColor="#000000"
-                        android:layout_margin="10dp" />
+                        android:layout_margin="15dp"
+                        android:paddingLeft="5dp" />
 
                 </RelativeLayout>
 
@@ -104,13 +105,14 @@
 
                     <TextView
                         android:id="@+id/bigDate"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
                         android:text="bigDate"
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:gravity="center"
-                        android:textColor="#000000" />
+                        android:textColor="#000000"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_margin="20dp" />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
