--- a/app/src/main/res/layout/rate_item_card_small.xml
+++ b/app/src/main/res/layout/rate_item_card_small.xml
@@ -48,6 +48,7 @@
                         android:layout_height="wrap_content"
                         android:layout_centerHorizontal="true"
                         android:layout_centerVertical="true"
+                        android:textColor="#000000"
                         android:layout_gravity="center_horizontal|center_vertical"
                         android:text="5.0"
                         android:textSize="50sp" />
@@ -63,10 +64,10 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
-                android:layout_gravity="center"
                 android:background="@null"
                 app:rating="2.4"
-                android:layout_margin="10dp" />
+                android:layout_margin="20dp"
+                android:layout_gravity="center_vertical" />
 
         </LinearLayout>
 
@@ -89,25 +90,30 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical|center_horizontal"
                     app:fa_icon="fa-user"
-                    android:layout_weight="1"></com.gms.gms_meal.lib.FontAwesomeText>
+                    android:layout_weight="1"
+                    android:layout_marginRight="3dp"></com.gms.gms_meal.lib.FontAwesomeText>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="num"
+                    android:textColor="#000000"
                     android:id="@+id/smallNum"
                     android:layout_gravity="center_vertical|center_horizontal"
                     android:layout_weight="1"
-                    android:gravity="center" />
+                    android:gravity="center"
+                    android:layout_margin="5dp" />
 
             </LinearLayout>
 
             <TextView
                 android:id="@+id/smallDate"
+                android:textColor="#000000"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="date"
-                android:layout_weight="1"></TextView>
+                android:layout_weight="1"
+                android:layout_margin="5dp"></TextView>
         </LinearLayout>
 
 
