--- a/app/src/main/res/layout/rate_item_card_big.xml
+++ b/app/src/main/res/layout/rate_item_card_big.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@null"
+    android:id="@+id/bigRipple"
     app:rv_color="@null"
     app:rv_zoom="true">
 
@@ -29,17 +30,6 @@
             android:background="@null"
             android:orientation="vertical">
 
-            <com.gms.gms_meal.lib.ColoredRatingBar
-                android:id="@+id/bigRatingBar"
-                style="@style/coloredRatingBarStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="20dp"
-                app:rating="5.0"
-                android:layout_gravity="center_horizontal" />
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -64,6 +54,15 @@
                         android:textColor="#000000"
                         android:layout_margin="15dp"
                         android:paddingLeft="5dp" />
+
+                    <com.gms.gms_meal.lib.FontAwesomeText
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="70dp"
+                        app:fa_icon="fa-lightbulb-o"
+                        android:id="@+id/bigFontRate"
+                        android:layout_centerVertical="true"
+                        android:layout_centerHorizontal="true" />
 
                 </RelativeLayout>
 
