--- a/app/src/main/res/layout/rate_item_card_small.xml
+++ b/app/src/main/res/layout/rate_item_card_small.xml
@@ -32,9 +32,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
                 android:background="@null"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_weight="1">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -52,68 +52,67 @@
                         android:layout_gravity="center_horizontal|center_vertical"
                         android:text="5.0"
                         android:textSize="50sp" />
+                    <com.gms.gms_meal.lib.FontAwesomeText
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="70dp"
+                        app:fa_icon="fa-lightbulb-o"
+                        android:id="@+id/smallFontRate"
+                        android:layout_centerVertical="true"
+                        android:layout_centerHorizontal="true" />
 
                 </RelativeLayout>
 
             </LinearLayout>
 
-            <com.gms.gms_meal.lib.ColoredRatingBar
-                android:id="@+id/smallRatingBar"
-                style="@style/coloredRatingBarStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:background="@null"
-                app:rating="2.4"
-                android:layout_margin="20dp"
-                android:layout_gravity="center_vertical" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="bottom|end"
-            android:padding="5dp">
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_height="match_parent"
                 android:orientation="horizontal"
-                android:background="@null">
-
-                <com.gms.gms_meal.lib.FontAwesomeText
-                    android:id="@+id/smallFontNum"
-                    android:layout_width="wrap_content"
+                android:layout_gravity="bottom|end"
+                android:padding="5dp"
+                android:layout_weight="1">
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical|center_horizontal"
-                    app:fa_icon="fa-user"
                     android:layout_weight="1"
-                    android:layout_marginRight="3dp"></com.gms.gms_meal.lib.FontAwesomeText>
+                    android:orientation="horizontal"
+                    android:background="@null"
+                    android:layout_gravity="center_vertical">
+
+                    <com.gms.gms_meal.lib.FontAwesomeText
+                        android:id="@+id/smallFontNum"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical|center_horizontal"
+                        app:fa_icon="fa-user"
+                        android:layout_weight="1"
+                        android:layout_marginRight="3dp"></com.gms.gms_meal.lib.FontAwesomeText>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="num"
+                        android:textColor="#000000"
+                        android:id="@+id/smallNum"
+                        android:layout_gravity="center_vertical|center_horizontal"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:layout_margin="5dp" />
+
+                </LinearLayout>
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="num"
+                    android:id="@+id/smallDate"
                     android:textColor="#000000"
-                    android:id="@+id/smallNum"
-                    android:layout_gravity="center_vertical|center_horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="date"
                     android:layout_weight="1"
-                    android:gravity="center"
-                    android:layout_margin="5dp" />
-
+                    android:layout_margin="5dp"
+                    android:layout_gravity="center_vertical"></TextView>
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/smallDate"
-                android:textColor="#000000"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="date"
-                android:layout_weight="1"
-                android:layout_margin="5dp"></TextView>
         </LinearLayout>
 
 
