--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,7 +13,7 @@
     <item name="android:windowContentOverlay">@null</item>
     <item name="windowActionBar">false</item>
     <item name="windowNoTitle">true</item>
-
+    <item name="android:windowNoTitle">true</item>
     <!-- Toolbar Theme / Apply white arrow -->
     <item name="colorControlNormal">@android:color/white</item>
     <item name="actionBarTheme">@style/AppTheme.ActionBarTheme</item>
