--- a/app/src/main/res/layout/meal_item_card_small.xml
+++ b/app/src/main/res/layout/meal_item_card_small.xml
@@ -47,7 +47,7 @@
         android:id="@+id/mealdate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|right"
+        android:layout_gravity="bottom|left"
         android:layout_margin="10dp"
         android:text="date"
         android:textColor="#000000"
